--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 ##
 
 # The site will be available at http://localhost:LOCAL_PORT
-LOCAL_PORT=8889
+LOCAL_PORT=80
 
 # Where to run WordPress from. Valid options are 'src' and 'build'.
 LOCAL_DIR=src
@@ -31,4 +31,4 @@ LOCAL_WP_DEBUG_DISPLAY=true
 LOCAL_SCRIPT_DEBUG=true
 
 # The URL to use when running e2e tests.
-WP_BASE_URL=http://localhost:${LOCAL_PORT}
+WP_BASE_URL=http://wczgz2020.wordpress.test
